01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingress-test
  annotations:
    restart.k8s.hpa.de/ttl: 5m
  name: ingress-test
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ingress-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ingress-test
    spec:
      containers:
      - image: hashicorp/http-echo
        imagePullPolicy: Always
        name: http-echo
        resources: {}
