02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-service
spec:
  selector:
    app: ingress-test
  ports:
  - port: 80
    targetPort: 5678
